--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,90 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.menu-top li {
+  float: left;
+  margin: 0 !important;
+  padding: 0 10px 5px 10px;
+}
+
+.menu-top li a {
+  display: inline-block;
+  padding: 9px 0 2px 0 !important;
+  color: #777;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
+  font-weight: 700;
+  font-size: 13px;
+  transition: all 0.3s ease-in;
+  position: relative;
+}
+
+.menu-top li a:before {
+  content: "";
+  width: 0;
+  left: 50%;
+  left: 0;
+  bottom: -1px;
+  height: 1px;
+  z-index: 10;
+  background: #e1001a !important;
+  position: absolute;
+  transition: 0.3s ease-out;
+}
+
+.menu-top li a:hover {
+  color: #e1001a;
+  border-bottom: 1px solid rgba(255, 255, 255, 0) !important;
+  transition: all 0.3s ease-out;
+}
+
+.menu-top a:hover:before {
+  width: 100%;
+  left: 0;
+  transition: 0.3s ease-out;
+  border: 0 !important;
+}
+
+.menu-top li div {
+  display: none;
+  position: absolute;
+  z-index: 1020;
+  box-sizing: border-box;
+  min-width: 200px;
+  padding: 25px;
+  background: #f8f8f8;
+  color: #000;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  margin-top: 5px;
+}
+
+.menu-top li:hover div,
+.menu-top li div:hover {
+  display: block;
+}
+
+.menu-top li ul li {
+  text-transform: none !important;
+  display: block !important;
+  width: 100%;
+}
+
+.menu-top li ul li a {
+  color: #777 !important;
+  border-bottom-color: rgba(0, 0, 0, 0) !important;
+  display: block !important;
+  text-transform: none !important;
+  font-weight: normal;
+  font-size: 14px;
+}
+
+.panel-container {
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
