--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -52,6 +52,7 @@
   z-index: 1020;
   box-sizing: border-box;
   min-width: 200px;
+  max-width: 200px;
   padding: 25px;
   background: #f8f8f8;
   color: #000;
