--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -88,6 +88,7 @@ body {
   text-transform: none !important;
   font-weight: normal;
   font-size: 14px;
+  padding: 3px 0 0 0 !important;
 }
 
 .panel-container {
