--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -217,3 +217,33 @@ body {
   background-color: #d10a10;
   color: #fff;
 }
+
+.overlay {
+  z-index: 1;
+}
+
+.overlay:hover ~ h2 {
+  color: red;
+}
+
+.card .overlay:hover + .card-img img {
+  transform: scale(1.2);
+  transition: all 400ms;
+}
+
+.top-nav {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.card-img {
+  width: 60px;
+}
+
+@media (min-width: 768px) {
+  .card-img {
+    width: 100%;
+  }
+}
