--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,14 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html,
+  body {
+    font-family: "Readex Pro", "Roboto", sans-serif !important;
+  }
+}
 ::selection {
   background: #e1001a;
   color: #fff;
   text-shadow: none;
 }
 
-body {
-  font-family: "Segoe UI", sans-serif;
+::-webkit-scrollbar {
+  width: 4px;
+  overflow-y: scroll;
+  background: #001415;
+  box-shadow: inset 0 0 4px #707070;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #e1001a;
+  border-radius: 10px;
 }
 
 .menu-top li {
@@ -18,7 +32,8 @@ body {
   padding: 0 10px 5px 10px;
 }
 
-.menu-top li a {
+.menu-top li a,
+.menu-top li button {
   display: inline-block;
   padding: 9px 0 2px 0 !important;
   color: #777;
@@ -30,7 +45,8 @@ body {
   position: relative;
 }
 
-.menu-top li a:before {
+.menu-top li a:before,
+.menu-top li button:before {
   content: "";
   width: 0;
   left: 50%;
@@ -43,13 +59,15 @@ body {
   transition: 0.3s ease-out;
 }
 
-.menu-top li a:hover {
+.menu-top li a:hover,
+.menu-top li button:hover {
   color: #e1001a;
   border-bottom: 1px solid rgba(255, 255, 255, 0) !important;
   transition: all 0.3s ease-out;
 }
 
-.menu-top a:hover:before {
+.menu-top a:hover:before,
+.menu-top button:hover:before {
   width: 100%;
   left: 0;
   transition: 0.3s ease-out;
@@ -101,6 +119,9 @@ body {
   flex-direction: column;
 }
 
+.carouselClass {
+  direction: initial;
+}
 .carousel .control-next.control-arrow:before {
   border-left: 8px solid #e1001a !important;
 }
@@ -167,6 +188,8 @@ body {
 .about-tabs li.active button,
 .about-tabs li.active a {
   padding-bottom: 15px;
+  background-color: #e1001a;
+  color: #fff;
 }
 .about-tabs li a.lavor {
   background-color: #40525c;
@@ -246,4 +269,8 @@ body {
   .card-img {
     width: 100%;
   }
+}
+
+.rtl {
+  direction: rtl;
 }
