--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -274,3 +274,10 @@
 .rtl {
   direction: rtl;
 }
+
+.reference-list ul {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding-inline-start: 2rem;
+  list-style-type: disc;
+}
