--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,7 +5,7 @@
 @layer base {
   html,
   body {
-    font-family: "Readex Pro", "Roboto", sans-serif !important;
+    font-family: "Cairo", sans-serif !important;
   }
 }
 ::selection {
