Update as new comments

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -36,11 +36,11 @@
 .menu-top li button {
   display: inline-block;
   padding: 9px 0 2px 0 !important;
-  color: #777;
+  color: #000;
   text-transform: uppercase;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
   font-weight: 700;
-  font-size: 13px;
+  font-size: 14px;
   transition: all 0.3s ease-in;
   position: relative;
 }
@@ -100,7 +100,7 @@
 }
 
 .menu-top li ul li a {
-  color: #777 !important;
+  color: #000 !important;
   border-bottom-color: rgba(0, 0, 0, 0) !important;
   display: block !important;
   text-transform: none !important;
@@ -245,7 +245,7 @@
   z-index: 1;
 }
 
-.overlay:hover ~ h2 {
+.overlay:hover ~ a h2 {
   color: red;
 }
 .card-img img {
